--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,35 @@ header a{
     color: aquamarine;
 }
 
-section .phone-video{
+.phone-video{
     display: block;
     margin:0 auto;
+}
+
+.travel h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.625rem;
+    color: white;
+    font-weight: 300;
+}
+
+.travel p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.3125rem;
+    color: gray;
+}
+
+.coming-soon h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2.625rem;
+    color: white;
+    font-weight: 300;
+}
+ 
+.coming-soon a{
+    color: aquamarine;
+}
+footer h4{
+    text-align: right;
+    color: gray;
 }
